--- a/app/globals.css
+++ b/app/globals.css
@@ -49,13 +49,6 @@
   scroll-behavior: smooth;
 }
 
-.glassmorphism {
-  background: rgba(255, 254, 254, 0.5);
-  backdrop-filter: blur(50px);
-  -webkit-backdrop-filter: blur(20px);
-  border: 1px solid rgba(211, 210, 210, 0.441);
-}
-
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
@@ -131,5 +124,9 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+
+  .glassmorphism {
+    @apply bg-[rgba(255,254,254,0.5)] backdrop-blur-lg;
   }
 }
